name:              moddit
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Matthew Elder
maintainer:        Matthew Elder
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://moddit.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     AppState
                     AppTypes
                     Forms

    ghc-options:   -Wall -threaded -O0 -fno-warn-orphans
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                OverloadedStrings
                DeriveDataTypeable
                DisambiguateRecordFields
                NamedFieldPuns

executable         moddit
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    build-depends: base
                 , containers
                 , ixset
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-static
                 , yesod-default
                 , yesod-form
                 , yesod-platform == 1.0.0
                 , mime-mail
                 , safe
                 , shakespeare-css
                 , shakespeare-js
                 , shakespeare-text
                 , clientsession
                 , bytestring
                 , text
                 , template-haskell
                 , hamlet
                 , time
                 , wai
                 , wai-extra
                 , transformers
                 , monad-control
                 , yaml
                 , acid-state >= 0.6.3
                 , safecopy
                 , mtl
                 , blaze-html

    extensions: TemplateHaskell
                QuasiQuotes
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                OverloadedStrings
                DeriveDataTypeable
                DisambiguateRecordFields
                NamedFieldPuns

