name:              moddit
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Matthew Elder
maintainer:        Matthew Elder
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://moddit.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     AppState
                     AppTypes
                     Forms

    ghc-options:   -Wall -threaded -O0 -fno-warn-orphans
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                CPP
                MultiParamTypeClasses
                TypeFamilies
                OverloadedStrings
                DeriveDataTypeable
                DisambiguateRecordFields
                NamedFieldPuns

executable         moddit
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    build-depends: acid-state == 0.6.3
                 , base
                 , blaze-html
                 , blaze-markup
                 , bytestring
                 , clientsession
                 , containers
                 , hamlet
                 , ixset
                 , json
                 , mime-mail
                 , monad-control
                 , mtl
                 , safe
                 , safecopy
                 , shakespeare-css
                 , shakespeare-js
                 , shakespeare-text
                 , text
                 , template-haskell
                 , time
                 , transformers
                 , wai
                 , wai-extra
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-default
                 , yesod-form
                 , yesod-platform == 1.0.3.4
                 , yesod-static

    extensions: TemplateHaskell
                QuasiQuotes
                CPP
                MultiParamTypeClasses
                TypeFamilies
                OverloadedStrings
                DeriveDataTypeable
                DisambiguateRecordFields
                NamedFieldPuns

